# Y86-64-Simulator-ICS-2025-Autumn

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  cpu.cpp  cpu.h  cpu.py  meson.build  test.py
answer/: abs-asum-cmov.json  abs-asum-jmp.json  asum.json  asumi.json  asumr.json  cjr.json  j-cc.json  poptest.json  prog1.json  prog10.json  prog2.json  prog3.json  prog4.json  prog5.json  prog6.json  prog7.json  prog8.json  prog9.json  pushquestion.json  pushtest.json  ret-hazard.json
dev_tests/: cpu_test.cc  main_test.cc  ppu_timer_test.cc
docs/: architecture.md
docs/y86-slides/: package.json  pnpm-lock.yaml  slides.md
memory/: main.cpp  program_loader.cpp  program_loader.h  ram.cpp  ram.h
src/: bus.cc  cpu.cc  joystick.cc  logger.cc  main.cc  ppu.cc
src/include/: bus.h  bus_result.h  cpu.h  device.h  joystick.h  logger.h  ppu.h  ram.h  timer.h  y86_stat.h
test/: asumi.yo
